--- a/packages/documentation/src/pages/getting-started/working-on-va-gov/environments.mdx
+++ b/packages/documentation/src/pages/getting-started/working-on-va-gov/environments.mdx
@@ -13,3 +13,8 @@ There are four environments for va.gov; one is when the site is running on a loc
 | staging | https://staging.va.gov | https://staging-api.va.gov | vagovstaging | production | After a merge to master |
 | production | https://www.va.gov | https://api.va.gov | vagovprod | production | Daily, Monday - Friday |
 
+## Access
+
+While both dev and staging are public, they are behind an HTTP basic auth password. You'll need to enter those [credentials](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Accessing-Staging.md) when first opening the sites.
+
+In addition, there are many test users for these sites (and local environments) that can be used to test out different features. These can be found in the same [Accessing Staging](https://github.com/department-of-veterans-affairs/vets.gov-team/blob/master/Work%20Practices/Accessing-Staging.md) doc as the basic auth credentials.
