Add metalsmith docs

--- a/packages/documentation/src/pages/architecture/index.mdx
+++ b/packages/documentation/src/pages/architecture/index.mdx
@@ -2,4 +2,4 @@
 title: Architecture docs
 ---
 
-Here's where documenation abaout site architecture lives.
+Here's where documentation about site architecture lives.
