--- a/packages/documentation/src/pages/platform/index.mdx
+++ b/packages/documentation/src/pages/platform/index.mdx
@@ -2,4 +2,4 @@
 title: Platform docs
 ---
 
-Here's where documenation abaout the platform lives.
+Here's where documentation about the platform lives.
