--- a/packages/documentation/src/pages/architecture/metalsmith/templates.mdx
+++ b/packages/documentation/src/pages/architecture/metalsmith/templates.mdx
@@ -1,6 +1,6 @@
 # How templates work for Markdown pages
 
-Templates use [tinyliquid](https://github.com/leizongmin/tinyliquid/), a JavaScript implementation of [Liquid](https://liquidmarkup.org).
+Templates use [tinyliquid](https://github.com/leizongmin/tinyliquid/), a JavaScript implementation of [Liquid](https://shopify.github.io/liquid/).
 
 There are three "wrapper" templates currently in use for Markdown content. They're all in `src/site/layouts`.
 
