trim down content on home page

--- a/packages/documentation/src/pages/index.mdx
+++ b/packages/documentation/src/pages/index.mdx
@@ -6,7 +6,7 @@ title: Veteran Facing Services client application documentation
 
 Welcome! This site will help you get set up to work on the front end of VA.gov.
 
-- If you're looking to get your environment set up, visit our [Getting Started](getting-started) section.
-- If you're interested in the architecture of VA.gov and how it works, see [Architecture](architecture).
-- For information about building forms on VA.gov, visit the [Forms](forms) section.
-- For all other information about the VFS platform (including Formation React components), visit the [Platform](platform) section.
+- [Getting Started](getting-started) - environment setup
+- [Architecture](architecture) - overview of how VA.gov works
+- [Forms](forms) - building forms and using the forms system
+- [Platform](platform) - all other information including Formation React components
