move SOCKS proxy rationale to documented decisions

--- a/packages/documentation/src/pages/architecture/front-end-standards/documented-decisions/summary.mdx
+++ b/packages/documentation/src/pages/architecture/front-end-standards/documented-decisions/summary.mdx
@@ -5,5 +5,6 @@
 - Fall 2016 - [Browsers supported](/architecture/front-end-standards/documented-decisions/browser-support)
 - May 2017 - [Remove USWDW and Foundation grid](/architecture/front-end-standards/documented-decisions/uswds-foundation)
 - January 2017 - [Why we use react-jsonschema-form to build forms](/architecture/front-end-standards/documented-decisions/building-forms)
+- Feb 2017 - [Why we use SOCKS proxy to connect to internal tools](/architecture/front-end-standards/documented-decisions/SOCKS-proxy)
 - March 2018 - [Why we forked react-jsonschema-form](/architecture/front-end-standards/documented-decisions/rjsf-fork)
 - December 2018 - [Why we use Mocha instead of Jest](/architecture/front-end-standards/documented-decisions/jest)
